test/baseline/func-env.test
; Tests for the env() function.

env _ledger_test=success
test eval "env('_ledger_test')"
success
end test

test eval "env()" -> 1
__ERROR__
While evaluating value expression:
  env()
  ^^^^^
While calling function 'env ':
Error: Too few arguments to function
end test

test eval "env('')" -> 1
__ERROR__
While evaluating value expression:
  env("")
  ^^^^^^^
While calling function 'env ':
Error: No such environment 
end test
